# NetScan

./: .gitignore  CMakeLists.txt  README.md
config/: suricata.yaml
data/: fingerprints.json
src/: main.cpp
src/app/: app.cpp  app.h
src/core/: analyzer.cpp  analyzer.h  db_writer.cpp  db_writer.h  fingerprint_db.cpp  fingerprint_db.h  ja3.h  matcher.cpp  matcher.h  network_utils.cpp  network_utils.h  queue_worker.cpp  queue_worker.h  unknown_queue.cpp  unknown_queue.h
src/gui/: gui_runner.cpp  gui_runner.h  gui_state.h
src/suricata/: suricata_runner.cpp  suricata_runner.h
